[INTERNAL][FIX] sap.m.Link disabled links look like active ones on IE
- Fixed comments

CR-Id: 012003146900008987742014
(cherry picked from commit 4d875673193d5689e2b4b8e7f0466ed195cd8022)

--- a/src/sap.m/src/sap/m/themes/sap_hcb/Link.less
+++ b/src/sap.m/src/sap/m/themes/sap_hcb/Link.less
@@ -9,7 +9,7 @@
 	text-decoration: underline;
 }
 
-.sapMLnkDsbl {
+.sapMLnkDsbl, .sapMLnkDsbl:visited {
 	outline: none;
 	cursor: default;
 	color: @sapHCReducedFG;
@@ -70,3 +70,4 @@
 .sapUiSizeCondensed .sapUiTableCell>.sapMLnk {
 	.sapUiCondensedTableCellContent; /* see shared.css */
 }
+
